# sqwar

./: CMakeLists.txt  CMakeSettings.json  MacOSXBundleInfo.plist.in  bg.bat  bg.sh  ffmpeg.sh  ffmpegcmds.bat  ios-cmake.sh  ios.toolchain.cmake
core/: Alignment.cpp  Application.cpp  Application.h  CMakeLists.txt  DepthPlanes.cpp  DepthProps.h  DepthPts.cpp  DepthPts.h  Engine.cpp  Engine.h  FFmpeg.cpp  FFmpeg.h  FaceVis.cpp  FaceVis.h  Hud.cpp  Hud.h  Mesh.cpp  Mesh.h  Network.cpp  Network.h  OctGrid.h  OctTree.cpp  OctTreeLoc.cpp  OctTreeLoc.h  PlanesVis.cpp  PlanesVis.h  Player.cpp  Player.h  Pt.h  PtsLib.h  PtsVis.cpp  PtsVis.h  Record.cpp  Record.h  SceneItem.cpp  SceneItem.h  Square.cpp  Square.h  StdIncludes.h  World.cpp  (+1 more)
core/asio/: README  configure  configure.ac
core/asio/doc/: index.html  standalone_HTML.manifest
core/asio/doc/asio/: examples.html  history.html  index.html  net_ts.html  overview.html  reference.html  std_executors.html  tutorial.html  using.html
core/asio/doc/asio/examples/: cpp03_examples.html  cpp11_examples.html  cpp14_examples.html  cpp17_examples.html
core/asio/doc/asio/overview/: core.html  cpp2011.html  implementation.html  networking.html  posix.html  rationale.html  serial_ports.html  signals.html  ssl.html  timers.html  windows.html
core/asio/doc/asio/reference/: Endpoint.html  (+483 more)
core/asio/include/: Makefile.am  Makefile.in
core/asio/include/asio/: associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_stream_socket.hpp  basic_waitable_timer.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  cancellation_signal.hpp  cancellation_state.hpp  cancellation_type.hpp  co_spawn.hpp  connect.hpp  read.hpp  read_at.hpp  read_until.hpp  this_coro.hpp  use_awaitable.hpp  write.hpp  write_at.hpp
core/asio/src/: Makefile.in  Makefile.msc
core/asio/src/tests/: Makefile.am  Makefile.in
core/cppcoro/: async_auto_reset_event.hpp  async_generator.hpp  async_latch.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  awaitable_traits.hpp  broken_promise.hpp  cancellation_registration.hpp  cancellation_source.hpp  cancellation_token.hpp  config.hpp  file.hpp  file_buffering_mode.hpp  file_open_mode.hpp  file_read_operation.hpp  file_share_mode.hpp  file_write_operation.hpp  fmap.hpp  generator.hpp  inline_scheduler.hpp  io_service.hpp  is_awaitable.hpp  multi_producer_sequencer.hpp  on_scope_exit.hpp  operation_cancelled.hpp  read_only_file.hpp  read_write_file.hpp  readable_file.hpp  recursive_generator.hpp  resume_on.hpp  round_robin_scheduler.hpp  schedule_on.hpp  sequence_barrier.hpp  sequence_range.hpp  sequence_traits.hpp  shared_task.hpp  single_consumer_async_auto_reset_event.hpp  single_consumer_event.hpp  single_producer_sequencer.hpp  (+7 more)
core/cppcoro/detail/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  manual_lifetime.hpp  remove_rvalue_reference.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32.hpp  win32_overlapped_operation.hpp
core/cppcoro/lib/: async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_mutex.cpp  auto_reset_event.cpp  auto_reset_event.hpp  build.cake  cancellation_registration.cpp  cancellation_source.cpp  cancellation_state.cpp  cancellation_state.hpp  cancellation_token.cpp  file.cpp  file_read_operation.cpp  file_write_operation.cpp  io_service.cpp  ip_address.cpp  ip_endpoint.cpp  ipv4_address.cpp  ipv4_endpoint.cpp  ipv6_address.cpp  ipv6_endpoint.cpp  lightweight_manual_reset_event.cpp  read_only_file.cpp  read_write_file.cpp  readable_file.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp  socket_disconnect_operation.cpp  socket_helpers.cpp  socket_helpers.hpp  socket_recv_from_operation.cpp  socket_recv_operation.cpp  socket_send_operation.cpp  socket_send_to_operation.cpp  spin_mutex.cpp  spin_mutex.hpp  spin_wait.cpp  spin_wait.hpp  static_thread_pool.cpp  (+4 more)
core/cppcoro/net/: ip_address.hpp  ip_endpoint.hpp  ipv4_address.hpp  ipv4_endpoint.hpp  ipv6_address.hpp  ipv6_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_disconnect_operation.hpp  socket_recv_from_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_send_to_operation.hpp
core/gmtl/: Generate.h
core/imgui/: droidsans.ttf.h  fs_imgui_image.bin.h  fs_ocornut_imgui.bin.h  icons_font_awesome.ttf.h  icons_kenney.ttf.h  imgui.cpp  imgui.h  roboto_regular.ttf.h  robotomono_regular.ttf.h  vs_imgui_image.bin.h  vs_ocornut_imgui.bin.h
core/imgui/dear-imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_user.h  imgui_user.inl  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
core/imgui/dear-imgui/widgets/: color_picker.h  color_wheel.h  dock.h  file_list.h  gizmo.h  gizmo.inl  markdown.h  memory_editor.h  memory_editor.inl  range_slider.h  range_slider.inl
core/imgui/iconfontheaders/: .gitignore  GenerateIconFontCppHeaders.py  LICENSE  README.md  icons_font_awesome_4.h  icons_font_awesome_5.h  icons_font_awesome_5_brands.h  icons_fork_awesome.h  icons_ionicons.h  icons_kenney.h  icons_material_design.h  icons_material_design_icons.h
core/imgui/stb/: stb_truetype.h
core/kdtree++/: allocator.hpp  function.hpp  iterator.hpp  kdtree.hpp  node.hpp  region.hpp
core/shaders/: CMakeLists.txt  cs_copyparent.sc  cs_copysect.sc  cs_erosion.sc  cs_noise.sc  fs_cubes.sc  fs_hud.sc  fs_planes.sc  fs_targetcube.sc  noise.sh  uniforms.sh  varying.def.sc  vs_cubes.sc  vs_face.sc  vs_hud.sc  vs_planes.sc  vs_terrain.sc
ios/: CMakeLists.txt  MacOSXBundleInfo.plist.in  bgfx_utils.cpp  bgfx_utils.h  bounds.cpp  bounds.h  bounds.inl  cmd.cpp  cmd.h  dbg.h  dialog.cpp  dialog.h  entry.cpp  entry.h  entry_p.h  input.cpp  input.h  main.mm
win/: CMakeLists.txt  Resource.h  map.cpp  map.rc
(+3591 files in other folders)
