cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)


set (BGFX_INCLUDE_ROOT ${CMAKE_INSTALL_PREFIX}/include)
set (BGFX_INCLUDE ${BGFX_INCLUDE_ROOT}/bgfx)
set (BGFX_LIB ${CMAKE_INSTALL_PREFIX}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MainBinaryDir})

################################################################################
# Target
################################################################################
set(Main_Files
"map.cpp"
"Resource.h"
"map.h"
"map.rc"
)

add_executable(${PROJECT_NAME} WIN32 ${Main_Files})

set (PLATFORMLIBS
"iphlpapi;"
"ws2_32;"
"d3dcompiler;"
"dxgi;"
"dxguid;"
"d3d11;"
"Shcore;")


target_link_libraries(${PROJECT_NAME} LINK_PUBLIC 
    ${BGFX_LIB}/bgfx.lib 
    ${BGFX_LIB}/astc-codec.lib 
    ${BGFX_LIB}/bimg.lib 
    ${BGFX_LIB}/bx.lib
    mdns/mdns
    core 
    ${PLATFORMLIBS}
       )
       
target_include_directories(${PROJECT_NAME} PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/."
    "${CMAKE_BINARY_DIR}/."
    "${BGFX_INCLUDE_ROOT}"
    "${BX_INC_DIR_COMPAT}"
    "${BGFX_INC_DIR}"
    )